Added a header and completed the grid setup in the navigation.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <header>
+    <div class="col-xs-3">Logo
+    </div>
+    <div class="col-xs-4">
+    Splurting out positive affirmations from Ralph Smart
+    </div> 
 
+    <div class="col-xs-5">
+      <%= link_to 'Contribute', '#' %>
+      <%= link_to 'About', '#' %>
+    </div>
+
+  </header>
+
+  <br class="clear" />
 <%= yield %>
 
 </body>
