Added logo and hr with some design.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,18 +8,28 @@
 </head>
 <body>
   <header>
-    <div class="col-xs-3">Logo
+    <div class="col-xs-3">
+      <div class="circle">
+        <br />
+        Feel
+        <br />
+        the
+        <br />
+        Peace
+      </div>
+
     </div>
-    <div class="col-xs-4">
+    <div class="col-xs-4 slogan">
     Splurting out positive affirmations from Ralph Smart
     </div> 
 
-    <div class="col-xs-5">
+    <div class="col-xs-5 links">
       <%= link_to 'Contribute', '#' %>
       <%= link_to 'About', '#' %>
     </div>
 
   </header>
+  <hr />
 
   <br class="clear" />
 <%= yield %>
