--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,6 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+
 .clear {
   clear: both;
 }
@@ -39,6 +40,8 @@
   color: black;
   font-size: 25px;
   border-bottom: 1px solid #dfdfdf;
+  font-family: 'ralewayregular', sans-serif;
+  font-weight: bold;
 }
 
 header {
@@ -47,4 +50,14 @@ header {
 
 hr {
   clear: both;
+}
+
+h1 {
+  font-family: 'ralewayregular', sans-serif; 
+  font-weight: bold;
+  font-size: 48px;
+}
+
+h2 {
+  font-family: 'ralewayitalic', sans-serif;
 }
