--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,22 @@
   <hr />
 
   <br class="clear" />
-<%= yield %>
+
+  <div class = "container">
+    <%= yield %>
+  </div>
+
+  <div class="footer">
+    <div class="container">
+      <div class="col-xs-6">
+        <%= link_to "This isn't enough, I need more", "#", class: "next-quote" %>
+      </div>
+      <div class="col-xs-6 footer-blurb">
+        Proudly hacked in Denver by <a href="http://thefirehoseproject.com">Vicky Nyffeler </a><br />
+        Want to build your own Splurty Web App - <a href="http://thefirehoseproject.com">Learn how to code here</a>
+      </div>
+    </div>  
+</div>
 
 </body>
 </html>
