--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
   <header>
     <div class="col-xs-3">
+    <%= link_to root_path, class: 'logo' do %>
       <div class="circle">
         <br />
         Feel
@@ -17,6 +18,7 @@
         <br />
         Peace
       </div>
+    <% end %>
 
     </div>
     <div class="col-xs-4 slogan">
@@ -24,7 +26,7 @@
     </div> 
 
     <div class="col-xs-5 links">
-      <%= link_to 'Contribute', '#' %>
+      <%= link_to 'Contribute', new_quote_path %>
       <%= link_to 'About', '#' %>
     </div>
 
@@ -40,7 +42,7 @@
   <div class="footer">
     <div class="container">
       <div class="col-xs-6">
-        <%= link_to "This isn't enough, I need more", "#", class: "next-quote" %>
+        <%= link_to "This isn't enough, I need more", root_path, class: "next-quote" %>
       </div>
       <div class="col-xs-6 footer-blurb">
         Proudly hacked in Denver by <a href="http://thefirehoseproject.com">Vicky Nyffeler </a><br />
