--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 
     <div class="col-xs-5 links">
       <%= link_to 'Contribute', new_quote_path %>
-      <%= link_to 'About', '#' %>
+      <%= link_to 'About', about_path %>
     </div>
 
   </header>
