--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,13 +21,14 @@
     <% end %>
 
     </div>
-    <div class="col-xs-4 slogan">
-    Splurting out positive affirmations from Ralph Smart
+    <div class="col-xs-4 hidden-xs slogan">
+    Splurting Out Positive Affirmations
     </div> 
 
-    <div class="col-xs-5 links">
+    <div class="col-xs-8 col-xs-offset-1 col-sm-offset-0 col-xs-5 links">
       <!-- Button trigger modal -->
       <%=link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
+      &nbsp;&nbsp;
       <%= link_to 'About', about_path %>
     </div>
 
@@ -45,15 +46,18 @@
       </div>
       <%= simple_form_for Quote.new do |f| %>
         <div class="modal-body">
-          <%= f.input :saying %>
-          <%= f.input :author %>
+          <%= f.input :saying, label: "What is the positive affirmation you want to add?", placeholder: "Always believe that something wonderful is about to happen." %>
+          <br />
+
+          <%= f.input :author, label: "Who is the author of the quote?", placeholder: "Ralph Smart" %>
           <br />
           <%= f.submit 'Create', class: 'btn btn-danger' %>
-        <% end %>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <%= f.submit 'Add Quote', class: 'btn btn-danger' %>
+      <% end %>
       </div>
     </div>
   </div>
@@ -74,10 +78,10 @@
 
   <div class="footer">
     <div class="container">
-      <div class="col-xs-6">
+      <div class="col-xs-12 col-xs-6">
         <%= link_to "This isn't enough, I need more", root_path, class: "next-quote" %>
       </div>
-      <div class="col-xs-6 footer-blurb">
+      <div class="col-xs-12 col-xs-6 footer-blurb">
         Proudly hacked in Denver by <a href="http://thefirehoseproject.com">Vicky Nyffeler </a><br />
         Want to build your own Splurty Web App - <a href="http://thefirehoseproject.com">Learn how to code here</a>
       </div>
