--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,3 +1,13 @@
-<h1><%= @quote.saying %></h1>
-<h2>- <%= @quote.author %></h2>
+<h2>
+  <span>Splurty No. <%= @quote.id %></span>
+  Here's the <u>best positive affirmations</u> you can get!
+</h2> 
 
+
+<h1><%= @quote.saying %></h1>
+<h2 class="pull-right">- <%= @quote.author %></h2>
+
+<br class="clear" />
+<br />
+<br />
+<br />
